# BookPoint

./: command.txt
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260308_0001_initial_schema.py  (+13 more)
backend/app/: main.py
backend/app/db/: base.py  (+1 more)
backend/scripts/: __init__.py  backup_db.ps1  backup_db.sh  check_runtime.py  restore_db.ps1  restore_db.sh  run_cleanup_once.py  seed.py
backend/tests/: conftest.py  test_auth.py  test_buffer_aware_scheduling.py  test_config_parsing.py  test_customer_dedup.py  test_customer_identity.py  test_db_constraints.py  test_notifications.py  test_organizations.py  test_password_security.py  test_phase_3_1_organization_system.py  test_phase_3_2_provider_capabilities.py  test_phase_3_3_location_backfill_migration.py  test_phase_3_3_multi_location_support.py  test_phase_4_1_discovery_booking_flow.py  test_phase_4_2_customer_self_service.py  test_phase_5_1_payment_foundation.py  test_phase_5_2_deposits_prepaid_enforcement.py  test_phase_5_3_refunds_cancellation_fees.py  test_phase_5_4_commissions_payouts.py  test_phase_6_1_production_hardening.py  test_phase_6_2_observability_auditability.py  test_phase_6_3_rate_limiting_abuse_protection.py  test_phase_6_4_deployment_ops_hardening.py  test_provider_schedule_refinement.py  test_provider_service_availability.py  test_scheduling_and_appointments.py  test_service_catalog.py  test_service_provider_backfill_migration.py  test_whatsapp_gateway.py  test_whatsapp_mvp_integration.py
(+142 files in other folders)
